kubernetes/mysql-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: visualoffice
    component: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualoffice
      component: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: visualoffice
        component: mysql
    spec:
      containers:
      - image: androsovm/mysql:latest
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
