kubernetes/usersapi-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi
  labels:
    app: visualoffice
    component: usersapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: visualoffice
      component: usersapi
  template:
    metadata:
      name: usersapi-pod
      labels:
        app: visualoffice
        component: usersapi
    spec:
      containers:
      - image: androsovm/usersapi:test
        name: usersapi
