kubernetes/mysql-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: visualoffice
    component: mysql
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: visualoffice
    component: mysql
