kubernetes/usersapi-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: usersapi
  labels:
    app: visualoffice
    component: usersapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: visualoffice
    component: usersapi
