kubernetes/webappsite-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webappsite
  labels:
    app: visualoffice
    component: webappsite
spec:
  type: NodePort
  ports:  
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: visualoffice
    component: webappsite
