kubernetes/webappsite-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webappsite
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: webappsite
          servicePort: 80
